k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: knufesta2019
spec:
  type: ExternalName
  externalName: production-was.knufesta2019.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: floweryroad
spec:
  type: ExternalName
  externalName: production-was.floweryroad.svc.cluster.local
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: freshtuna-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "*.freshtuna.me"
    secretName: "freshtuna-me"
  rules:
  - host: "knufesta2019.freshtuna.me"
    http:
      paths:
      - path: /
        backend:
          serviceName: "knufesta2019"
          servicePort: 80
  - host: "api.floweryroad.freshtuna.me"
    http:
      paths:
      - path: /
        backend:
          serviceName: "floweryroad"
          servicePort: 80
